--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-label{
-    display: block;
-    margin: 10px;
+table{
+    border-collapse: collapse;
+}
+td,th{
+    border: 2px solid black;
+    padding: 5px 15px;
 }
